# vikunja

./: .clang-format  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CI.txt  CITATION.cff  CMakeLists.txt  README.md
ci/: README.md  check_cpp_code_style.sh
ci/custom_jobs/: integration_test.yml
ci/gitlab_scripts/: print_env.sh  setup.sh  test.sh
ci/gitlab_scripts/integration_test/: addsubdirectory.cmake  prepare_add_subdirectory.sh  prepare_find_package.sh  run.sh
ci/job_generator/: custom_job.py  generate_job_yaml.py  job_generator.py  reorder_jobs.py  requirements.txt  verify.py  versions.py  vikunja_filter.py  vikunja_globals.py
ci/job_generator/alpaka_job_coverage/: __init__.py  filter_backend_version.py  filter_compiler_name.py  filter_compiler_version.py  filter_software_dependency.py  globals.py  main_functions.py  util.py
cmake/: testUtils.cmake  vikunjaConfig.cmake.in
docs/: Doxyfile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/advanced/: cmake.rst
docs/source/basic/: algorithm.rst  installation.rst  introduction.rst  operators.rst
docs/source/development/: apireference.rst  ci.rst  docs.rst  sphinx.rst  styleguide.rst  test.rst
docs/source/logo/: README.md
example/: CMakeLists.txt
example/complex/: CMakeLists.txt  main.cpp
example/constantIterator/: CMakeLists.txt
example/constantIterator/src/: constantIterator-main.cpp
example/constantIteratorBenchmark/: CMakeLists.txt
example/constantIteratorBenchmark/src/: constantIteratorBenchmark-main.cpp
example/cuplaReduce/: CMakeLists.txt  README.md
example/cuplaReduce/include/: cuplaVikReduce.hpp
example/cuplaReduce/src/: cuplaVikReduce.cpp  main.cpp
example/mdspan_transform/: CMakeLists.txt
example/mdspan_transform/src/: transform-main.cpp
example/permutationIterator/: CMakeLists.txt
example/permutationIterator/src/: permutationIterator-main.cpp
example/reduce/: CMakeLists.txt
example/reduce/src/: reduce-main.cpp
example/transform/: CMakeLists.txt
example/transform/src/: transform-main.cpp
example/zipIterator/: CMakeLists.txt
example/zipIterator/src/: zipIterator-main.cpp
include/vikunja/: GenericLambdaKernel.hpp
include/vikunja/access/: BaseStrategy.hpp  BlockStrategy.hpp  MdspanLinear.hpp  PolicyBasedBlockStrategy.hpp
include/vikunja/algorithm/: transform.hpp
include/vikunja/concept/: acc.hpp  memVisibility.hpp  operator.hpp
include/vikunja/mem/: memObj.hpp
include/vikunja/mem/iterator/: BaseIterator.hpp  ConstantIterator.hpp  PermutationIterator.hpp  PolicyBasedBlockIterator.hpp  TransformIterator.hpp  ZipIterator.hpp
include/vikunja/operators/: operators.hpp
include/vikunja/reduce/: reduce.hpp
include/vikunja/reduce/detail/: BlockThreadReduceKernel.hpp  SmallProblemReduceKernel.hpp
include/vikunja/reduce/sample/: alpakaConfig.hpp
include/vikunja/transform/: transform.hpp
include/vikunja/transform/detail/: BlockThreadTransformKernel.hpp
include/vikunja/workdiv/: BlockBasedWorkDiv.hpp
script/: check_cpp_code_style.sh  compiler_base.yml  cxx_tests.yml  run_test.sh
script/integration_test/: findPackage.cmake  prepare_add_subdirectory.sh  prepare_find_package.sh  run.sh
src/: CMakeLists.txt  reduce.cpp
test/: CMakeLists.txt  CatchMain.cpp  dummy.cpp
test/benchmarks/: CMakeLists.txt
test/benchmarks/helper/: CMakeLists.txt  test_bench_helper.cpp
test/benchmarks/include/vikunja/bench/: memory.hpp
test/benchmarks/reduce/: CMakeLists.txt  bench_thrust_reduce.cpp  bench_vikunja_constiter_reduce.cpp  bench_vikunja_reduce.cpp
test/benchmarks/transform/: CMakeLists.txt  bench_thrust_transform.cpp  bench_vikunja_transform.cpp  bench_vikunja_transform_zipiter.cpp
test/include/vikunja/test/: AlpakaSetup.hpp  utility.hpp
test/integ/: CMakeLists.txt
test/integ/reduce/: CMakeLists.txt
test/integ/reduce/include/: reduce_setup.hpp
test/integ/reduce/src/: Reduce.cpp
test/integ/transform/: CMakeLists.txt
test/integ/transform/include/: transform_setup.hpp
test/integ/transform/src/: ConstantIterator.cpp  Transform.cpp
test/unit/: CMakeLists.txt
test/unit/access/: CMakeLists.txt
test/unit/access/src/: BaseStrategy.cpp  MemAccessStrategy.cpp
test/unit/concept/: CMakeLists.txt
test/unit/concept/src/: acc.cpp  memVisibility.cpp  operator.cpp
test/unit/cxx/: CMakeLists.txt
test/unit/cxx/include/: alpaka_cxx.hpp
test/unit/cxx/src/: custom_main.cpp  cxx.cpp
test/unit/dummy/: CMakeLists.txt  Dummy.cpp
test/unit/dummy/src/: Dummy.cpp
test/unit/iterator/: CMakeLists.txt
test/unit/iterator/src/: ConstantIterator.cpp  Iterator.cpp  TransformIterator.cpp
test/unit/mem/: CMakeLists.txt
test/unit/mem/memObj/: CMakeLists.txt
test/unit/mem/memObj/src/: memObj.cpp
test/unit/operators/: CMakeLists.txt
test/unit/operators/src/: Operators.cpp
test/unit/reduce/: CMakeLists.txt  Reduce.cpp
test/unit/reduce/src/: Reduce.cpp
